@@ -47,6 +47,11 @@ import sys
 import threading
 import time
 
+MOSQUITTO_MAJOR=1
+MOSQUITTO_MINOR=2
+MOSQUITTO_REVISION=3
+MOSQUITTO_VERSION_NUMBER=(MOSQUITTO_MAJOR*1000000+MOSQUITTO_MINOR*1000+MOSQUITTO_REVISION)
+
 if platform.system() == 'Windows':
     EAGAIN = errno.WSAEWOULDBLOCK
 else:
