@@ -15,6 +15,7 @@ Client library:
 - Block in Python loop_stop() until all messages are sent, as the
   documentation states should happen.
 - Fix for asynchronous connections on Windows. Closes bug #1249202.
+- Module version is now available in mosquitto.py.
 
 Clients:
 - mosquitto_sub now uses fwrite() instead of printf() to output messages, so
